load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

exports_files(srcs = [
    "package.json",
    "package-lock.json",
])

nodejs_binary(
    name = "js-toxcore-c",
    data = glob(["lib/*.js"]),  # + ["@npm//ref-napi"],
    entry_point = "lib/main.js",
    tags = ["no-cross"],
    visibility = ["//visibility:public"],
)
